# Graduation

./: README.md
.github/workflows/: main.yml
Gen-AI-Essentials/Local-Dev/jupyterserver/: Readme.md
backend-app/src/: main.ts
backend-app/src/wishlist/: wishlist.controller.spec.ts  wishlist.service.spec.ts
chatbot_backend/: .dockerignore  .gitignore  Dockerfile  README.md  db.json  logging_config.py  pyproject.toml  requirements.txt
chatbot_backend/data/vector_db/: chroma.sqlite3
chatbot_backend/docs/: AI_System_Blueprint.md
chatbot_backend/knowledge/: categories.json  faqs.json  interaction_examples.json  niches.json  overview_and_strategy.json  overview_and_strategy.md  policies.json  product_tips.json  products.json  products.md  promotions.json  user_experience.json  user_experience.md  users.json
chatbot_backend/knowledge/vector_db/: chroma.sqlite3
chatbot_backend/services/: api_client.py  vector_store.py
chatbot_backend/src/: chatbot_api.py
chatbot_backend/src/chatbot_backend/: crew.py  main.py  mock_api.py
chatbot_backend/src/chatbot_backend/config/: agents.yaml  tasks.yaml
chatbot_backend/src/chatbot_backend/tools/: custom_tool.py  langchain_agent.py  n8n_tool.py  order_api_tool.py  vector_db_tool.py
frontend/: jest.config.ts  next.config.ts  package-lock.json  package.json
frontend/src/app/: layout.tsx
frontend/src/app/(auth)/onboarding pages/: page.tsx
frontend/src/app/lib/: auth.ts
frontend/src/tests/pages/: cart.test.tsx
frontend/src/tests/pages/auth/: login.test.tsx  signup.test.tsx
